# PktSwerve

./: .gitignore  CMakeLists.txt  README.md  app_icon.rc  main.cpp  resources.qrc
src/app/: Logger.cpp  Logger.h  PopupWindow.cpp  PopupWindow.h  SettingsWindow.cpp  SettingsWindow.h  ToggleSwitch.cpp  ToggleSwitch.h  TrayApplication.cpp  TrayApplication.h
src/core/: BypassEngine.cpp  BypassEngine.h  PacketUtils.h
src/platform/: IPlatformBackend.h
src/platform/windows/: WinDivertBackend.cpp  WinDivertBackend.h
